Adds Character component.

--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,11 @@ h1 {
 }
 h2 {
   font-size: 1.6rem;
+  margin-bottom: 0;
+}
+
+.team-wrapper {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: center;
 }
