--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,38 @@ h2 {
   border-bottom: 26px solid transparent;
   border-right: 26px solid black;
 }
+
+@media only screen and (max-width: 800px) {
+  body {
+    padding-bottom: 1rem;
+  }
+  .team-wrapper {
+    flex-wrap: wrap;
+    padding: 12px;
+    padding-top: 22px;
+  }
+  .team-wrapper .char-wrapper {
+    flex: 22vw;
+    margin: 8px 0;
+    display: flex;
+    justify-content: center;
+  }
+  .answer-wrapper {
+    /*  */
+    margin-bottom: 0;
+    margin-top: 12px;
+    padding: 16px;
+  }
+  .answer-wrapper .answer-baloon {
+    border: 4px solid black;
+    border-radius: 22px;
+    margin-left: 22px;
+    font-size: 1rem;
+  }
+  .answer-baloon:after {
+    left: -12px;
+    border-top: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+    border-right: 12px solid black;
+  }
+}
