--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ h1 {
 h2 {
   font-size: 1.6rem;
   margin-bottom: 0;
+  padding: 16px;
 }
 
 .team-wrapper {
@@ -29,13 +30,17 @@ h2 {
 }
 
 .answer-wrapper {
-  /*  */
   margin-bottom: 32px;
   margin-top: 2rem;
   display: flex;
   height: 10vw;
   padding: 2rem;
   align-items: center;
+  transform: translateX(-100%);
+  transition: transform 0.4s;
+}
+.answer-wrapper.animated {
+  transform: translateX(0);
 }
 .answer-wrapper .answer-baloon {
   flex: 1;
