--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 .App {
   font-family: "Fredoka One", cursive;
-  display: flex;
-  flex-direction: column;
   height: 100vh;
   --timer-background: blue;
   --timer-color: white;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.App.md {
+  background-image: url("./assets/img/md.svg");
+}
+.App.n {
+  background-image: url("./assets/img/n.svg");
+}
+.App.l {
+  background-image: url("./assets/img/l.svg");
+}
+.App.e {
+  background-image: url("./assets/img/e.svg");
+}
+.App.r {
+  background-image: url("./assets/img/r.svg");
+}
+.App.p {
+  background-image: url("./assets/img/p.svg");
+}
+.App.mc {
+  background-image: url("./assets/img/mc.svg");
+}
+
+.App > .inner-wrapper {
+  background: rgba(255, 255, 255, 0.9);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .team-wrapper {
@@ -43,14 +72,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 30vw;
+  width: 300px;
 }
 .theme .chooser-label {
   width: 100%;
   background: var(--timer-background);
   color: var(--timer-color);
   height: 40px;
-  font-size: 1.5vw;
+  font-size: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,7 +112,7 @@
   color: var(--timer-color);
   flex: 1;
   margin: 0 4px;
-  font-size: 2vw;
+  font-size: 1.5rem;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
@@ -112,6 +141,47 @@
   font-weight: 700;
   color: var(--timer-color);
 }
+.theme-character {
+  display: flex;
+  height: 100px;
+  margin: 0 1.4vw;
+  margin-bottom: 8px;
+}
+.char-avatar {
+  height: 100px;
+  width: 100px;
+  background: var(--timer-background);
+  margin-right: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.char-avatar img {
+  height: 80%;
+  width: 80%;
+}
+.char-avatar img.n-img {
+  transform: scale(1.5);
+  margin-left: -41px;
+  margin-bottom: -37px;
+}
+.char-avatar img.e-img {
+  transform: scale(1.3);
+  margin-left: -4px;
+  margin-bottom: -20px;
+}
+.char-text {
+  flex: 1;
+  background: var(--timer-background);
+  color: var(--timer-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 8px;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+}
 
 .wot-timer .values,
 .wot-timer .labels {
@@ -138,6 +208,9 @@
   margin-right: 0.6vw;
 }
 
+.wot-timer .labels {
+  margin-bottom: 2rem;
+}
 .wot-timer .labels .timer-col {
   width: 16.6vw;
   text-align: right;
